# my_workspace

./: README.md
Applications/Design_pattern/Open_closed_principle/: solution.cc  violation.cc
Applications/Design_pattern/Single_responsibility_principle/: solution.cc  violation.cc
Applications/Linux_IPC/POSIX_shared_memory/: run.sh
Applications/Std_future/: shared_future.cc
Applications/Stdlib/Std_future/: a.out  async.cc  logger.hh  packaged_task.cc  promise.cc  shared_future.cc
Applications/System_call_interface/Examples/: dummy.txt  open.c  write.c
Udemy_courses/Test_driven_development/Project_01/: CMakeLists.txt  cmake_install.cmake  main.cpp
Udemy_courses/Test_driven_development/Project_02/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
Udemy_courses/Test_driven_development/Project_03/: CMakeCache.txt  main.cpp
Udemy_courses/Test_driven_development/Project_04_Example/: CMakeCache.txt  cmake_install.cmake  myExecutable
Udemy_courses/Test_driven_development/Project_05_Assertion_Example/: CMakeLists.txt  cmake_install.cmake  testRunner.cpp
Udemy_courses/Test_driven_development/Project_06_Assertion_strings/: CMakeCache.txt  LibraryCode.hpp  Makefile  myExecutable
applications/linux_IPC/Datagram_sockets/: client.c  server.c
applications/linux_IPC/POSIX_shared_memory/: reader.c  writer.c
applications/linux_IPC/Stream_sockets/: client.c  server.c
applications/syscall/Examples/: build.sh  getppid.c  lseek.c  read.c  socket.c
projects/net/proxy_server/: connection_monitor.cc  connection_monitor.hh  curl.sh  http_client.cc  http_client.hh  (+8 more)
(+51 files in other folders)
